[gd_scene load_steps=3 format=3 uid="uid://difb52ow47vdi"]

[ext_resource type="Script" path="res://Scripts/Environment/spawn_area.gd" id="1_5nfty"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xke5d"]
size = Vector2(4209, 312)

[node name="spawn area" type="Area2D"]
script = ExtResource("1_5nfty")

[node name="top" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xke5d")

[node name="Marker2D1" type="Marker2D" parent="."]
position = Vector2(-1664, -152)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(-832, -152)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(0, -152)

[node name="Marker2D5" type="Marker2D" parent="."]
position = Vector2(832, -152)

[node name="Marker2D6" type="Marker2D" parent="."]
position = Vector2(1664, -152)
